[gd_scene load_steps=13 format=3 uid="uid://bf3ntfxgk8j1e"]

[ext_resource type="Script" path="res://m_green.gd" id="1_0dhdk"]
[ext_resource type="Texture2D" uid="uid://cnpx62r6yrhkr" path="res://New Piskel (35).png" id="2_p3hn0"]
[ext_resource type="Script" path="res://green.gd" id="2_pcm57"]
[ext_resource type="Texture2D" uid="uid://bu6xvobdcjkdc" path="res://New Piskel (35) (2).png" id="2_r8mqd"]
[ext_resource type="Script" path="res://Area2D.gd" id="3_5k3br"]
[ext_resource type="Script" path="res://kamakazi.gd" id="4_gdx8d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fpqy2"]
radius = 8.97402
height = 20.0

[sub_resource type="Animation" id="Animation_w01gq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left_wing:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.855211]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_wing:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.453786]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6u0ch"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.753515, 0.133203, 0.18612, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_w62ff"]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1), Vector2(1.2, 1), Vector2(1.1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rup44"]
resource_name = "moving"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left_wing:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.757473, -0.453786]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_wing:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.453786, 1.3631]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6kce"]
_data = {
"RESET": SubResource("Animation_w01gq"),
"death": SubResource("Animation_6u0ch"),
"idle": SubResource("Animation_w62ff"),
"moving": SubResource("Animation_rup44")
}

[node name="bee" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 524289
collision_mask = 524289
script = ExtResource("1_0dhdk")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.753515, 0.133203, 0.18612, 1)
texture_filter = 1
position = Vector2(-1, 0)
texture = ExtResource("2_r8mqd")
hframes = 4
vframes = 4

[node name="mele" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_5k3br")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="mele"]
position = Vector2(-5, 0)
rotation = 1.07687
scale = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_fpqy2")

[node name="projectile" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 524288
script = ExtResource("3_5k3br")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="projectile"]
position = Vector2(-5, 0)
rotation = 1.07687
scale = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_fpqy2")

[node name="kamakazi" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
script = ExtResource("4_gdx8d")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="kamakazi"]
position = Vector2(-5, 0)
rotation = 1.07687
scale = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_fpqy2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u6kce")
}
script = ExtResource("2_pcm57")

[node name="death" type="Timer" parent="."]
wait_time = 0.4

[node name="mana_spawn" type="Marker2D" parent="."]

[node name="live_mana" type="Node2D" parent="."]

[node name="left_wing" type="Sprite2D" parent="."]
show_behind_parent = true
texture_filter = 1
position = Vector2(-11.6667, -3.33333)
rotation = 0.855211
texture = ExtResource("2_p3hn0")
offset = Vector2(-13, 0)
vframes = 2
frame = 1

[node name="right_wing" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-3.33333, 3.33333)
rotation = -0.453786
texture = ExtResource("2_p3hn0")
offset = Vector2(13, 0)
flip_h = true
vframes = 2
frame = 1

[connection signal="death" from="." to="." method="_on_death"]
[connection signal="death" from="." to="mele" method="_on_green_death"]
[connection signal="death" from="." to="kamakazi" method="_on_green_death"]
[connection signal="death" from="." to="AnimationPlayer" method="_on_green_death"]
[connection signal="area_entered" from="mele" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="mele" to="AnimationPlayer" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="mele" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="projectile" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="projectile" to="." method="_on_projectile_area_entered"]
[connection signal="area_entered" from="projectile" to="AnimationPlayer" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="projectile" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="projectile" to="." method="_on_projectile_body_entered"]
[connection signal="area_entered" from="kamakazi" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="kamakazi" to="." method="_on_kamakazi_area_entered"]
[connection signal="area_entered" from="kamakazi" to="AnimationPlayer" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="kamakazi" to="." method="_on_kamakazi_body_entered"]
[connection signal="timeout" from="death" to="." method="_on_death_timeout"]
